# server/auth/auth.route.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const validate = require('express-validation');
 const expressJwt = require('express-jwt');
-const paramValidation = require('../../config/param-validation');
+const validation = require('./auth-validation');
 const authCtrl = require('./auth.controller');
 const config = require('../../config/config');
 
@@ -9,22 +9,26 @@ const router = express.Router(); // eslint-disable-line new-cap
 
 /** POST /api/auth/login - Returns token if correct username and password is provided */
 router.route('/login')
-  .post(validate(paramValidation.login), authCtrl.login);
+  .post(validate(validation.login), authCtrl.login);
 
 router.route('/register')
-  .post(validate(paramValidation.register), authCtrl.register);
+  .post(validate(validation.register), authCtrl.register);
 
 router.route('/verify')
-  .post(validate(paramValidation.verify), authCtrl.verify);
+  .put(validate(validation.verify), authCtrl.verify);
 
 router.route('/otp')
-  .post(validate(paramValidation.otp), authCtrl.otp);
+  .post(validate(validation.otp), authCtrl.otp);
 
 router.route('/password')
-  .post(validate(paramValidation.password), authCtrl.password);
+  .post(validate(validation.password), authCtrl.password);
+
+router.route('/newpassword')
+  .put(validate(validation.password), authCtrl.password);
+
 /** GET /api/auth/random-number - Protected route,
  * needs token returned by the above as header. Authorization: Bearer {token} */
-router.route('/random-number')
-  .get(expressJwt({ secret: config.jwtSecret }), authCtrl.getRandomNumber);
+// router.route('/random-number')
+//   .get(expressJwt({ secret: config.jwtSecret }), authCtrl.getRandomNumber);
 
 module.exports = router;
