# swagger/swagger.yaml
@@ -7,17 +7,99 @@ servers:
   - url: 'http://localhost:7000/api/'
     description: SwaggerHub API Auto Mocking
 tags:
+  - name: Auth
+    description: Auth account
+  - name: User
+    description: Users description
   - name: Setting
     description: Category Api
   - name: Category
     description: Category Api
   - name: Check
     description: Check Api
-  - name: User
-    description: Users description
-  - name: Auth
-    description: Auth description
 paths:
+  /auth/login:
+    post:
+      summary: login
+      tags:
+        - Auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Login'
+      description: 'Login with username and password'
+      responses:
+        '200':
+          description: object
+        '500':
+          description: Server Internal Error
+  /auth/register:
+    post:
+      summary: register
+      tags:
+        - Auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Register'
+      description: 'Register with mobile and username and password'
+      responses:
+        '200':
+          description: object
+        '500':
+          description: Server Internal Error
+  /auth/verify:
+    put:
+      summary: verify
+      tags:
+        - Auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Verify'
+      description: 'sign user and resive jwt token'
+      responses:
+        '200':
+          description: object
+        '500':
+          description: Server Internal Error
+  /auth/otp:
+    post:
+      summary: otp
+      tags:
+        - Auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Otp'
+      description: 'Resend code and forget password'
+      responses:
+        '200':
+          description: object
+        '500':
+          description: Server Internal Error
+  /users/newpassword:
+    put:
+      summary: newpassword
+      tags:
+        - User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewPassword'
+      description: 'change password but whene user has login'
+      responses:
+        '200':
+          description: object
+        '500':
+          description: Server Internal Error
+      security:
+        - oAuth: []
   /health-check:
     get:
       tags:
@@ -29,37 +111,6 @@ paths:
           description: Ok
         '500':
           description: Server Internal Error
-  /auth/login:
-    post:
-      summary: login
-      tags:
-        - Auth
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Login'
-      description: ''
-      responses:
-        '200':
-          description: object
-        '500':
-          description: Server Internal Error
-      security:
-        - oAuth: []
-  /auth/random-number:
-    get:
-      summary: random-number
-      tags:
-        - Auth
-      description: ''
-      responses:
-        '200':
-          description: object
-        '500':
-          description: Server Internal Error
-      security:
-        - oAuth: []
   /users:
     get:
       tags:
@@ -149,6 +200,46 @@ paths:
           description: Server Internal Error
 components:
   schemas:
+    Verify:
+      type: object
+      properties:
+        mobile:
+          type: string
+          default: "09332369461"
+        code:
+          type: number
+          default: 9461
+    NewPassword:
+      type: object
+      properties:
+        password:
+          type: string
+          default: "123456"
+        passwordConfirm:
+          type: string
+          default: "123456"
+    Otp:
+      type: object
+      properties:
+        mobile:
+          type: string
+          default: "09332369461"
+    Register:
+      type: object
+      properties:
+        mobile:
+          type: string
+          default: "09332369461"
+        username:
+          type: string
+          default: sajadweb
+        password:
+          type: string
+          default: password
+      example:
+        mobile: "09332369461"
+        username: "sajadweb"
+        password: "123456"
     Login:
       type: object
       properties:
